# tauri-plugin_age-signals

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js
.github/workflows/: ci.yml
android/: .gitignore  build.gradle.kts  settings.gradle  tauri.plugin.json
android/src/androidTest/kotlin/com/charlesportwoodii/tauri/plugin/agesignals/: AgeSignalsPluginTest.kt
android/src/main/kotlin/com/charlesportwoodii/tauri/plugin/agesignals/: AgeSignalsMapper.kt  AgeSignalsPlugin.kt
android/tauri-android-stub/: build.gradle.kts
android/tauri-android-stub/src/main/kotlin/app/tauri/annotation/: Annotations.kt
android/tauri-android-stub/src/main/kotlin/app/tauri/plugin/: Invoke.kt  JSObject.kt  Plugin.kt
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: index.html  package.json  vite.config.js
examples/tauri-app/src/: App.svelte  app.css  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/icons/: icon.icns
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: AgeSignalsPlugin.swift
ios/Tests/: Package.swift
ios/Tests/AgeSignalsPluginTests/: AgeSignalsPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: age_signal.toml  check_age_range.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mapping.rs  mobile.rs  models.rs
(+1 files in other folders)
